@@ -12,10 +12,10 @@ ADDITIONAL_OBJCFLAGS +=
 ADDITIONAL_CFLAGS += 
 
 # Additional flags to pass to the linker
-ADDITIONAL_LDFLAGS +=  
+ADDITIONAL_LDFLAGS += "-L/usr/X11R6/lib -lX11" 
 
 # Additional include directories the compiler should search
-ADDITIONAL_INCLUDE_DIRS += 
+ADDITIONAL_INCLUDE_DIRS += "-I/usr/X11R6/include"
 
 # Additional library directories the linker should search
 ADDITIONAL_LIB_DIRS += 
